Final commit before any change

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,19 @@
-.nav-wrapper {
-    background: #fff;
+nav {
+ background: #AAAAAA!important;
 }
-.brand-logo {
-    color: #000;
+
+.brand-logo img{
+    margin-top: 5px;
+    width: 90%;
 }
+/*@media screen and (max-width: 450px) {
+   .brand-logo img{
+        width: 82%;
+    } 
+}
+
+@media (min-width: 550px) and (max-width: 770px) {
+   .brand-logo img{
+        width: 75%;
+    } 
+}*/
