--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -24,18 +24,24 @@
 
 
 <div class="box" >
+  
   <div *ngFor="let image of (visibleImages | filter:filterBy)">
     <div class="card">
       <div class="card-image">
         <img src="{{image.clientWorkUrl}}">
         
-        <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+        <a [routerLink]="['/image', image.id]"
+            class="btn-floating halfway-fab waves-effect waves-light red"
+            materialize="tooltip" data-position="left" data-delay="50" data-tooltip="Comments & Reviews">
+          <i class="material-icons">add</i>
+        </a>
       </div>
       <div class="card-content">
           <div class="chip">
             <img src="{{image.clientImageUrl}}" alt="Contact Person">
             {{image.clientName}}
           </div>
+          
       </div>
     </div>
   </div>
