--- a/src/app/image-detail/image-detail.component.html
+++ b/src/app/image-detail/image-detail.component.html
@@ -1,5 +1,44 @@
-<p>
-  image-detail works!
-</p>
+<div class="row">
+  
+      <div class="col s12">
+        <button [routerLink]="['/gallery']" class="waves-effect waves-light btn back-btn">
+          <i class="material-icons left prefix">arrow_back</i>
+          Back to gallery
+        </button>
+      </div>
+   
+</div>
 
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img class="bigger-image" src="{{image.clientWorkUrl}}">
+        <span class="card-title">Card Title</span>
+        
+      </div>
+      <div class="card-content">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="{{image.clientImageUrl}}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+              <p class="client-rating"  *ngIf="image.clientComment !== 'Reviews and Comments are missing'">
+                  <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
+                  <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
+                  <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
+                  <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
+                  <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
+              </p>
+              <span class="client-comment">
+                  {{image.clientComment}}
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
