--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Jarin Jaba</a>
+      <div class="nav-wrapper container">
+        <a href="" class="brand-logo">
+          <img src="assets/img/jarinjaba.png" alt="">
+        </a>
       </div>
       
     </nav>
