--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper container">
-        <a href="" class="brand-logo">
+        <a href="" class="brand-logo center">
           <img src="assets/img/jarinjaba.png" alt="">
         </a>
       </div>
