--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <nav class="white filter-image">
-    <div class="nav-wrapper">
+    <div class="">
       <div class="col s12">
         <a  class="waves-effect waves-teal btn-flat"
           [class.active]="filterBy === 'all'"
@@ -22,28 +22,37 @@
   </nav>
 </div>
 
-
-<div class="box" >
-  
-  <div *ngFor="let image of (visibleImages | filter:filterBy)">
-    <div class="card">
-      <div class="card-image">
-        <img src="{{image.clientWorkUrl}}">
-        
-        <a [routerLink]="['/image', image.id]"
-            class="btn-floating halfway-fab waves-effect waves-light red"
-            materialize="tooltip" data-position="left" data-delay="50" data-tooltip="Comments & Reviews">
-          <i class="material-icons">add</i>
-        </a>
-      </div>
-      <div class="card-content">
-          <div class="chip">
-            <img src="{{image.clientImageUrl}}" alt="Contact Person">
-            {{image.clientName}}
-          </div>
-          
-      </div>
-    </div>
-  </div>
-    
+<!-- Modal Trigger (find-me-in-fiverr) -->
+<div class="center">
+  <a href="https://www.fiverr.com/jarinjaba" target="_blank" class="find-me-in-fiverr" >
+    <span>Find me in</span>
+    <span>Fiverr</span>
+  </a>
 </div>
+
+
+<!--<div class="box" >-->
+  <masonry [useImagesLoaded]="true">
+    <masonry-brick class="box"  *ngFor="let image of (visibleImages | filter:filterBy)">
+      <div class="card">
+        <div class="card-image">
+          <img src="{{image.clientWorkUrl}}">
+          
+          <a [routerLink]="['/image', image.id]"
+              class="btn-floating halfway-fab waves-effect waves-light red"
+              materialize="tooltip" data-position="left" data-delay="50" data-tooltip="Comments & Reviews">
+            <i class="material-icons">add</i>
+          </a>
+        </div>
+        <div class="card-content">
+            <div class="chip">
+              <img src="{{image.clientImageUrl}}" alt="Contact Person">
+              {{image.clientName}}
+            </div>
+            
+        </div>
+      </div>
+    </masonry-brick>
+  </masonry>
+    
+<!--</div>-->
